# muzzle

./: Cargo.toml  blast_profile_heavy.json  blast_profile_light.json
assets/: sample.mp3.reapeaks
src/: lib.rs
src/ammo/: case.rs  mod.rs  projectile.rs
src/audio/: bezier.rs  blast.rs  blast_profile.rs  blast_wave.rs  friedlander_wave.rs  mod.rs  muzzle_blast.rs
src/firearm/: mod.rs
