[package]
name = "puffer"
version = "0.1.0"
authors = ["Fishy <caspar.m.green@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = { version = "0.14.0", default-features = false, features = ["flac", "vorbis", "wav"] }
hound = "3.4.0"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"